fix minor alignment issue with "read more (small)" link

--- a/version_control/Codurance_September2020/css/modules/editors-pick.css
+++ b/version_control/Codurance_September2020/css/modules/editors-pick.css
@@ -127,4 +127,5 @@
 
 .cm-editors-pick__link-small {
     margin: 0;
+    vertical-align: text-top;
 }
